--- a/public/styles.css
+++ b/public/styles.css
@@ -429,6 +429,8 @@ body {
         margin-bottom: 0.1rem;
         height: 16px;
         width: 14px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -442,6 +444,7 @@ body {
         display: inline-flex;
         align-items: center;
         justify-content: flex-start;
+        margin-left: 0;
     }
 }
 
