--- a/public/styles.css
+++ b/public/styles.css
@@ -429,8 +429,9 @@ body {
         margin-bottom: 0.1rem;
         height: 16px;
         width: 14px;
-        margin-left: auto;
-        margin-right: auto;
+        display: block;
+        margin: 0 auto 0.1rem auto;
+        text-align: center;
     }
 }
 
@@ -445,6 +446,7 @@ body {
         align-items: center;
         justify-content: flex-start;
         margin-left: 0;
+        text-align: left;
     }
 }
 
